# Trinity

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  GenerateFiles.bat  LICENSE  README.md  Trinity.sln  premake5.lua
Forge/: Forge.aps  Forge.rc  Forge.vcxproj  Forge.vcxproj.filters  Resource.aps  Tri-Editor.vcxproj  imgui.ini  premake5.lua  resource.h
Forge/Forge/: Forge.vcxproj
Forge/assets/scenes/: Physics2D.trinity  ScriptingTest.trinity  Test.trinity  test.trinity
Forge/assets/shaders/: Renderer2D_Quad.glsl  Texture.glsl
Forge/src/: EditorLayer.cpp  EditorLayer.h  ForgeApp.cpp
Forge/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Launcher/: CMakeLists.txt
Launcher/src/: LauncherApp.cpp  LauncherLayer.cpp  LauncherLayer.h  ProjectWizardLayer.cpp  ProjectWizardLayer.h
Sandbox/: Sandbox.vcxproj  TrinityProfile-Startup.json  imgui.ini  premake5.lua
Sandbox/Sandbox/: Sandbox.vcxproj
Sandbox/assets/scenes/: Example2D.trinity  Physics2D.trinity  Test.trinity
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
Tri-Editor/src/: EditorLayer.cpp  TriEditorApp.cpp
Trinity/: .gitignore  CMakeLists.txt  Trinity.vcxproj  Trinity.vcxproj.filters  premake5.lua
Trinity Forge/: Trinity Forge.vcxproj
Trinity Forge/src/: EditorLayer.cpp  EditorLayer.h  TrinityForgeApp.cpp
Trinity-ScriptCore/: premake5.lua
Trinity-ScriptCore/Source/: Camera.cs  Main.cs  Player.cs
Trinity/Trinity/: Trinity.vcxproj  Trinity.vcxproj.filters
Trinity/src/: Trinity.h  trpch.h
Trinity/src/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Trinity/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Trinity/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Trinity/src/Trinity/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h  trpch.h
Trinity/src/Trinity/BuildSystem/: BuildSystem.cpp  BuildSystem.h
Trinity/src/Trinity/Camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Culling.cpp  Culling.h
Trinity/src/Trinity/Core/: Application.cpp  Application.h  Assert.h  AssetManager.cpp  AssetManager.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  MouseCodes.h  PlatformDetection.h  ResourceManager.cpp  ResourceManager.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Trinity/src/Trinity/Debug/: Instrumentor.h
Trinity/src/Trinity/ECS/: Components.cpp  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h
Trinity/src/Trinity/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Trinity/src/Trinity/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Trinity/src/Trinity/Math/: Math.cpp  Math.h
Trinity/src/Trinity/Renderer/: Buffer.cpp  Buffer.h  BufferBase.h  BufferUtility.cpp  BufferUtility.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Primitives.cpp  Primitives.h  RenderCommand.cpp  RenderCommand.h  RenderGraph.cpp  RenderGraph.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  ShaderCache.cpp  ShaderCache.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderLibrary.cpp  (+13 more)
Trinity/src/Trinity/Renderer/PostProcess/: BloomPass.cpp  BloomPass.h  ToneMappingPass.cpp  ToneMappingPass.h
Trinity/src/Trinity/Resources/: ShaderWatcher.cpp  ShaderWatcher.h
Trinity/src/Trinity/Resources/DefaultAssets/Shaders/: Tonemapping.frag
Trinity/src/Trinity/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Trinity/src/Trinity/Scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h
Trinity/src/Trinity/UI/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.h  Panel.h
Trinity/src/Trinity/Utilities/: PlatformUtils.h  Utilities.cpp  Utilities.h
Trinity/src/Trinity/Vulkan/: VulkanContext.cpp  VulkanContext.h
Trinity/src/Trinity/Window/: Window.cpp  Window.h
TrinityCentre/: CMakeLists.txt
TrinityCentre/Assets/Shaders/: Simple.frag  Simple.frag.spv
TrinityCentre/Resources/Layout/: imgui.ini
TrinityCentre/Resources/Shaders/: Bloom.frag
TrinityCentre/Templates/DefaultAssets/: imgui.ini
TrinityCentre/src/: LauncherLayer.cpp  LauncherLayer.h  ProjectWizardLayer.cpp  ProjectWizardLayer.h  TrinityCentreApp.cpp
TrinityCentre/src/Layers/: ProjectCreatorLayer.cpp  ProjectCreatorLayer.h  ProjectLoaderLayer.cpp  ProjectLoaderLayer.h
TrinityForge/: CMakeLists.txt
TrinityForge/Assets/Shaders/: Simple.frag  Simple.vert
TrinityForge/Resources/DefaultAssets/: imgui.ini
TrinityForge/Resources/DefaultAssets/Shaders/: Simple.vert.spv
TrinityForge/Resources/Shaders/: Simple.vert
TrinityForge/Resources/TrinityForge/DefaultAssets/Shaders/: Bloom.vert  Simple.frag  Simple.vert
TrinityForge/src/: EditorLayer.cpp  EditorLayer.h  ForgeApp.cpp
TrinityForge/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  InspectorPanel.cpp  InspectorPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  SceneViewportPanel.cpp  SceneViewportPanel.h  StatsPanel.cpp  StatsPanel.h  ToolbarPanel.cpp  ToolbarPanel.h
scripts/: Setup.py  SetupVulkan.py  Win-GenerateProjects.bat
(+15 files in other folders)
